# conn-server

./: CLAUDE.md  LICENSE  README.md  agent_manager.py  auth.py  config.py  conftest.py  git_utils.py  mcp_catalog.py  mcp_config.py  preview_manager.py  project_config.py  pyproject.toml  requirements.txt  server.py  session_manager.py  setup.sh  test_auth_config.py  test_event_forwarder.py  test_git_utils.py  test_preview_manager.py  test_project_config.py  test_rest_endpoints.py  test_session_manager.py  tls.py
.github/workflows/: test.yml
conn_server/: __init__.py  auth.py  cli.py  config.py  git_utils.py  mcp_catalog.py  mcp_config.py  preview_manager.py  project_config.py  server.py  session_manager.py  tls.py
conn_server/dashboard/: app.js  index.html  style.css
dashboard/: app.js  index.html  style.css
docs/: api.md  architecture.md
tests/: conftest.py  test_agent_manager.py  test_auth_config.py  test_concurrency.py  test_event_forwarder.py  test_git_utils.py  test_mcp_catalog.py  test_mcp_config.py  test_preview_manager.py  test_project_config.py  test_rest_endpoints.py  test_session_manager.py  test_tls.py
