[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conn-server"
version = "0.1.0"
description = "Remote control server for Claude CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Patrick Bucaria" },
]
keywords = ["claude", "cli", "server", "remote"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
    "python-multipart>=0.0.9",
    "qrcode>=7.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
conn-server = "conn_server.cli:main"

[project.urls]
Homepage = "https://github.com/PatrickBucaria/conn-server"
Repository = "https://github.com/PatrickBucaria/conn-server"

[tool.hatch.build.targets.wheel]
packages = ["conn_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
